syntax = "proto3";

package proto;

// The email service definition.
service Phone {
  // Validate email
  rpc Validate (PhoneValidateRequest) returns (PhoneValidateReply) {}
  // Stream validate email
  rpc StreamValidate (stream PhoneValidateRequest) returns (stream PhoneValidateReply) {}
}

enum PhoneValidateError {
  NO_ERROR = 0;
  OTHER_ERROR = 1;
  BAD_FORMAT = 2;
}

message PhoneValidateRequest {
  string id = 1; // any you id for identificate email, return as is in responce
  string email = 2; // email for validate
}

message PhoneValidateReply {
  string id = 1; // you id from request
  bool valid = 2;
  string canonical = 3; // email in lowercase and strip spaces
  PhoneValidateError error = 4;
}
